# lang-bmb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
bmb/: Cargo.toml
bmb/compiler/: lexer.bmb  token.bmb
bmb/examples/: constrained_decoder_demo.rs  hello_x64.rs  sum.bmb
bmb/grammar/: bmb.pest
bmb/grammar-dist/: bmb.ebnf  bmb.gbnf  bmb.json
bmb/src/: ai.rs  ast.rs  codegen.rs  contracts.rs  error.rs  exhaustiveness.rs  fmt.rs  grammar.rs  lib.rs  lint.rs  main.rs  modules.rs  optimize.rs  parser.rs  testing.rs  types.rs
bmb/src/arm64/: codegen.rs  elf.rs  encoding.rs  mod.rs  registers.rs
bmb/src/cli/: args.rs  mod.rs  parser.rs
bmb/src/host/: io.rs  mod.rs
bmb/src/ir/: lower.rs  mod.rs  optimize.rs  types.rs
bmb/src/lsp/: main.rs
bmb/src/smt/: mod.rs
bmb/src/suggest/: frame.rs  mod.rs  postcondition.rs
bmb/src/x64/: codegen.rs  elf.rs  encoding.rs  macho.rs  mod.rs  pe.rs  registers.rs
bmb/stdlib/: README.md  io.bmb  logic.bmb  math.bmb  math_f64.bmb
bmb/tests/: integration_test.rs
bmb/tests/examples/: assert_example.bmb  divide.bmb  extern_test.bmb  factorial.bmb  factorial.wat  fibonacci.bmb  gcd.bmb  hello_print.bmb  helloworld.bmb  loop_demo.bmb  match_enum.bmb  match_primitives.bmb  test_example.bmb  types_demo.bmb
docs/: DESIGN_RATIONALE.md  IMPLEMENTATION_STATUS.md  LANGUAGE_REFERENCE.md  ROADMAP.md  SPECIFICATION.md  TUTORIAL.md
examples/: fibonacci.bmb  fibonacci.wat  hello.bmb  print_fib.bmb  print_hello.bmb
research/: RESEARCH_SUMMARY.md  pattern_matching_implementation.md
vscode-bmb/: language-configuration.json  package.json
vscode-bmb/src/: extension.ts
vscode-bmb/syntaxes/: bmb.tmLanguage.json
