[package]
name = "bmb"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "BMB (Bare-Metal-Banter) - A high-precision contract-first programming language targeting WebAssembly"
license = "MIT"
authors = ["AILL Project"]
repository = "https://github.com/openlith/bmb"
publish = false

[dependencies]
# Parser - PEG-based parsing
pest = "2.7"
pest_derive = "2.7"

# WebAssembly generation
wasm-encoder = "0.220"

# Error handling
thiserror = "2.0"

# JSON serialization (for grammar export)
serde_json = "1.0"

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "2.0", optional = true }
wasmtime = { version = "27", optional = true }
wasmprinter = { version = "0.220", optional = true }

[dev-dependencies]
# Testing utilities
wasmtime = "27"

[lib]
name = "bmb"
path = "src/lib.rs"

[[bin]]
name = "bmbc"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:colored", "dep:wasmtime", "dep:wasmprinter"]
