[package]
name = "bmb"
version = "0.15.8"
edition = "2021"
rust-version = "1.75"
description = "BMB (Bare-Metal-Banter) - A high-precision contract-first programming language targeting WebAssembly"
license = "MIT"
authors = ["AILL Project"]
repository = "https://github.com/openlith/lang-bmb"
publish = false

[dependencies]
# Parser - PEG-based parsing
pest = "2.7"
pest_derive = "2.7"

# WebAssembly generation
wasm-encoder = "0.220"

# Error handling
thiserror = "2.0"

# JSON serialization (for grammar export and diagnostics)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "2.0", optional = true }
wasmtime = { version = "27", optional = true }
wasmprinter = { version = "0.220", optional = true }

# SMT solver for static verification (optional)
# Note: rsmt2 is a pure-Rust SMT-LIB interface that works with Z3, CVC4, etc.
rsmt2 = { version = "0.16", optional = true }

# LSP server dependencies (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "io-std", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
# serde now in default deps
dashmap = { version = "6.0", optional = true }

[dev-dependencies]
# Testing utilities
wasmtime = "27"

[lib]
name = "bmb"
path = "src/lib.rs"

[[bin]]
name = "bmbc"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:colored", "dep:wasmtime", "dep:wasmprinter"]
smt = ["dep:rsmt2"]
lsp = ["dep:tower-lsp", "dep:tokio", "dep:async-trait", "dep:dashmap"]

[[bin]]
name = "bmb-lsp"
path = "src/lsp/main.rs"
required-features = ["lsp"]
